# srhdata

./: README.md  __init__.py  setup.cfg  srh36MS2.py  srh_fits.py  srh_fits_0306.py  srh_fits_0612.py  srh_utils.py  srh_uvfits.py  test.py
.github/workflows/: python-app.yml
images/temp.image/logtable/: table.f0
images/temp.mask/logtable/: table.f0
images/temp.model/logtable/: table.f0
images/temp.pb/logtable/: table.f0
images/temp.psf/logtable/: table.f0
images/temp.residual/logtable/: table.f0
images/temp.sumwt/: table.f0_TSM0
images/temp.sumwt/logtable/: table.f0
images/test12_0.image/logtable/: table.f0
images/test12_0.model/logtable/: table.f0
images/test12_0.psf/logtable/: table.f0
images/test12_0.residual/logtable/: table.f0
images/test12_0.sumwt/logtable/: table.f0
images/test13_0.image/logtable/: table.f0
images/test13_0.model/logtable/: table.f0
images/test13_0.psf/logtable/: table.f0
images/test13_0.residual/logtable/: table.f0
images/test13_0.sumwt/logtable/: table.f0
images/test14_0.image/logtable/: table.f0
images/test14_0.model/: table.f0
images/test14_0.model/logtable/: table.f0
images/test14_0.psf/logtable/: table.f0
images/test14_0.residual/logtable/: table.f0
images/test14_0.sumwt/logtable/: table.f0
images/test15_0.image/logtable/: table.f0
images/test15_0.model/logtable/: table.f0
images/test15_0.psf/logtable/: table.f0
images/test15_0.residual/logtable/: table.f0
images/test15_0.sumwt/: table.f0_TSM0
images/test15_0.sumwt/logtable/: table.f0
images/test16_0.image/logtable/: table.f0
images/test16_0.model/logtable/: table.f0
images/test16_0.psf/logtable/: table.f0
images/test16_0.residual/logtable/: table.f0
images/test16_0.sumwt/: table.f0
images/test16_0.sumwt/logtable/: table.f0
images/test17_0.image/logtable/: table.f0
images/test17_0.model/logtable/: table.f0
images/test17_0.psf/logtable/: table.f0
images/test17_0.residual/logtable/: table.f0
images/test17_0.sumwt/: table.f0_TSM0
images/test17_0.sumwt/logtable/: table.f0
images/test6_0.image/logtable/: table.f0
images/test6_0.image/mask0/: table.f0
images/test6_0.model/logtable/: table.f0
images/test6_0.pb/logtable/: table.f0
src/: srhFits.py  srhdata.py
src/srhdata/: ZirinTb.py  srh_0306_cp_fluxNorm.fits  srh_0306_cp_zeros.fits  srh_0612_cp_fluxNorm.fits  srh_0612_cp_zeros.fits  srh_1224_cp_fluxNorm.fits  srh_1224_cp_zeros.fits  srh_coordinates.py  srh_data.py  srh_fits.py  srh_fits_0306.py  srh_fits_0612.py  srh_fits_1224.py  srh_utils.py  srh_uvfits.py
srhData/: srhData.py
tests/: test.py
(+3 files in other folders)
