[metadata]
name = srhdata
version = 1.0.0
author = Maria Globa
author_email = mvgloba@gmail.com
description = A package for imaging using Siberian Radioheliograph data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maria-globa/srhdata
project_urls =
    Bug Tracker = https://github.com/maria-globa/srhdata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3, <3.9
install_requires=
   numpy<=1.21.6
   astropy==4.3.1
   scipy
   sunpy
   ephem
   scikit-image
   pyuvdata==2.0.1
   casatools
   casatasks

[options.packages.find]
where = src


