[metadata]
name = srhdata
version = 1.0.0
author = Maria Globa
author_email = mvgloba@gmail.com
description = A package for imaging using Siberian Radioheliograph data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maria-globa/srhdata
project_urls =
    Bug Tracker = https://github.com/maria-globa/srhdata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3, <3.11
install_requires=
   numpy
   astropy
   pyerfa
   scipy
   sunpy[map]
   ephem
   scikit-image
   pyuvdata==2.4.5
   casatools
   casatasks
   h5py
   threadpoolctl

[options.packages.find]
where = src

[options.package_data]
srhdata =
    *.fits